# BigAppleCinemas

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py  router.py
apps/backend/app/api/v1/: admin_catalog.py  admin_reports.py  auth.py  checkout.py  me.py  movies.py  reservations.py  showtimes.py  theaters.py  tickets.py
apps/backend/app/core/: cache.py  config.py  logging.py  metrics.py  rate_limit.py  security.py  ticket_lifecycle.py
apps/backend/app/db/: bootstrap.py  session.py
apps/backend/app/models/: __init__.py  auth_session.py  movie.py  order.py  recommendation.py  reservation.py  showtime.py  user.py
apps/backend/app/schemas/: __init__.py  auth.py  catalog.py  payment.py  portal.py  reservation.py
apps/backend/app/services/: movie_similarity_service.py  payment_service.py  reservation_service.py  seat_inventory.py
apps/backend/app/workers/: celery_app.py  tasks.py
apps/backend/tests/: conftest.py  test_auth.py  test_catalog_admin_integration.py  test_checkout.py  test_health.py  test_portal_api.py  test_rate_limit.py  test_reservations.py  test_workers.py
apps/frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  (+1 more)
docs/: api.md  architecture.md  concurrency.md  deployment.md  environment.md  payments.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  ux-design-brief.md
(+26 files in other folders)
