[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigapplecinemas-backend"
version = "0.1.0"
description = "FastAPI backend for Big Apple Cinemas"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.30.0",
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.5.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.1.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
